# SerialPort

./: CMakeLists.txt  main.cpp  readme.txt
SerialPort/: SerialPort.cpp  SerialPort.h
